syntax = "proto3";

package nightwatch.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ashwinyue/dcp/pkg/api/nightwatch/v1;v1";

// SmsBatch 表示SMS批次任务的配置
message SmsBatch {
    // SMS批次名称
    string name = 1;
    // SMS批次ID
    string batchID = 2;
    // 创建人
    string userID = 3;
    // SMS批次作用域
    string scope = 4;
    // SMS批次描述
    string description = 5;
    // 活动ID
    string campaignID = 6;
    // 任务ID
    string taskID = 7;
    // 表存储名称
    string tableStorageName = 8;
    // 内容ID
    string contentID = 9;
    // 内容
    string content = 10;
    // 内容签名
    string contentSignature = 11;
    // URL
    string url = 12;
    // 是否将成员ID与URL结合
    bool combineMemberIDWithURL = 13;
    // 自动触发
    bool autoTrigger = 14;
    // 调度时间
    google.protobuf.Timestamp scheduleTime = 15;
    // 扩展代码
    string extCode = 16;
    // 任务代码
    string taskCode = 17;
    // 提供商类型
    string providerType = 18;
    // 消息类型
    string messageType = 19;
    // 消息类别
    string messageCategory = 20;
    // 区域
    string region = 21;
    // 来源
    string source = 22;
    // 监视器
    string watcher = 23;
    // 是否挂起
    bool suspend = 24;
    // 创建时间
    google.protobuf.Timestamp createdAt = 25;
    // 更新时间
    google.protobuf.Timestamp updatedAt = 26;
}

message CreateSmsBatchRequest {
    SmsBatch smsBatch = 1;
}

message CreateSmsBatchResponse {
    string batchID = 1;
}

message UpdateSmsBatchRequest {
    string batchID = 1;
    optional string name = 2;
    optional string description = 3;
    optional string campaignID = 4;
    optional string taskID = 5;
    optional string tableStorageName = 6;
    optional string contentID = 7;
    optional string content = 8;
    optional string contentSignature = 9;
    optional string url = 10;
    optional bool combineMemberIDWithURL = 11;
    optional bool autoTrigger = 12;
    optional google.protobuf.Timestamp scheduleTime = 13;
    optional string extCode = 14;
    optional string taskCode = 15;
    optional string providerType = 16;
    optional string messageType = 17;
    optional string messageCategory = 18;
    optional string region = 19;
    optional string source = 20;
    optional string watcher = 21;
    optional bool suspend = 22;
}

message UpdateSmsBatchResponse {}

message DeleteSmsBatchRequest {
    repeated string batchIDs = 1;
}

message DeleteSmsBatchResponse {}

message GetSmsBatchRequest {
    // @gotags: uri:"batchID"
    string batchID = 1;
}

message GetSmsBatchResponse {
    SmsBatch smsBatch = 1;
}

message ListSmsBatchRequest {
    // @gotags: form:"offset"
    int32 offset = 1;
    // @gotags: form:"limit"
    int32 limit = 2;
}

message ListSmsBatchResponse {
    int64 total = 1;
    repeated SmsBatch smsBatches = 2;
}